--- a/client/partials/AppNav.html
+++ b/client/partials/AppNav.html
@@ -3,6 +3,10 @@
         <ul>
             <li><a href="/"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a></li>
             <li><a href="/"><i class="fa fa-users"></i> <span>Users Management</span></a></li>
+            <li><a href="/"><i class="fa fa-users"></i> <span>Users Management</span></a></li>
+            <li><a href="/"><i class="fa fa-role"></i> <span>Userasfds Management</span></a></li>
+            <li><a href="/"><i class="fa fa-tree"></i> <span>Useasdfrs Management</span></a></li>
+            <li><a href="/"><i class="fa fa-paper"></i> <span>Userasdfs Management</span></a></li>
         </ul>
     </div>
 </template>
