--- a/client/partials/MainNav.html
+++ b/client/partials/MainNav.html
@@ -3,6 +3,11 @@
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/dashboard">Dashboard</a></li>
+            {{#if currentUser}}
+            <li class="logout ">Logout</li>
+            {{else}}
+            <li class="login-toggle">Login</li>
+            {{/if}}
         </ul>
     </nav>
 </template>
